@@ -1,6 +1,7 @@
 Version 0.5.0~dev
 
 	* Use a pipe to send SIGCHILD events to a newly-created main loop.
+	* Drop all KeyError exception handling.
 
 Version 0.4.5 Released on 2010/07/07
 
